Lower font size on candidate names to avoid wrapping

--- a/src/components/candidate.module.scss
+++ b/src/components/candidate.module.scss
@@ -22,7 +22,7 @@
 
 .candidateName {
     margin-bottom: 12px;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 
 .candidateParty {
